--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to Andrew Dickinson's homepage!
-description: Feel free to bookmark this to keep an eye on my project updates
+title: Andrew Dickinson
+description: Feel free to bookmark this page to keep an eye on my project updates
