--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Andrew Dickinson
-description: Feel free to bookmark this page to keep an eye on my project updates
+description: Technical Consultant || Team Leader || Cyber Security Specialist
