--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: Andrew Dickinson
 description: Technical Consultant || Team Leader || Cyber Security Specialist
+url: http://andickinson.github.io
