Updated github repo url to point to root account

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ theme: jekyll-theme-slate
 title: Andrew Dickinson
 description: Technical Consultant || Team Leader || Cyber Security Specialist
 url: http://andickinson.github.io
+github:
+  repository_url: https://github.com/andickinson
 defaults:
   -
     scope:
